--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.4.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.4"
   }
 }
