--- a/Server/.env
+++ b/Server/.env
@@ -1,7 +1,17 @@
-MAIL_HOST = 
-MAIL_USER =
+MAIL_HOST = smtp.gmail.com
+MAIL_USER = ujjwalgupta1633@gmail.com
 MAIL_PASS = 
-JWT_SECRET = 
+
+JWT_SECRET = "Ujjwal"
+
 FOLDER_NAME = 
+
 RAZORPAY_KEY =
 RAZORPAY_SECRET =
+
+CLOUD_NAME = 
+API_KEY = 
+API_SECRET = 
+
+MONGODB_URL = 
+PORT = 4000
