Frontend of homepage

--- a/Server/.env
+++ b/Server/.env
@@ -1,17 +1,17 @@
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = ujjwalgupta1633@gmail.com
-MAIL_PASS = 
+MAIL_PASS = sidrzidpmjkmfntj
 
 JWT_SECRET = "Ujjwal"
 
-FOLDER_NAME = 
+FOLDER_NAME = "Ujjwal"
 
 RAZORPAY_KEY =
 RAZORPAY_SECRET =
 
-CLOUD_NAME = 
-API_KEY = 
-API_SECRET = 
+CLOUD_NAME = dcuikvhqf
+API_KEY = 217849896864469
+API_SECRET = E0RhzjBVbjjerAOTZpXY0_f-kMU
 
-MONGODB_URL = 
+MONGODB_URL = mongodb://localhost:27017/StudyNotion
 PORT = 4000
