--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
